@@ -1,3 +1,10 @@
+2003-04-02  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* GNUmakefile (buttons): Use script-fu lily-buttons.
+
+	* lily-button.scm: 
+	* aqua-pill-button.scm: Fixes for scripting multiple buttons at once.
+
 2003-04-01  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* newweb.css: Add margins.
